# TCPServerWithAESEncryption

./: .gitignore  README.md
Client/: CMakeLists.txt
Client/include/: AESManager.h  Client.h  Logger.h  RSAManager.h
Client/src/: AESManager.cpp  Client.cpp  Logger.cpp  RSAManager.cpp  main.cpp
Server/: CMakeLists.txt
Server/include/: Logger.h  RSAManager.h  Server.h  SocketManager.h
Server/src/: Logger.cpp  RSAManager.cpp  Server.cpp  SocketManager.cpp  main.cpp
